--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,15 +48,19 @@
     "postcss"
   ],
   "cSpell.words": [
+    "Bytemd",
     "fuxiaochen",
     "giscus",
+    "lowlight",
     "neno",
     "pgbouncer",
     "PGDATABASE",
     "PGHOST",
     "PGPASSWORD",
     "PGUSER",
+    "Shadcnui",
     "UNPOOLED",
+    "uploadthing",
     "Vercel"
   ]
 }
