--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@shikijs/rehype": "^3.2.2",
     "@tanstack/react-table": "^8.21.3",
     "@types/canvas-confetti": "^1.9.0",
+    "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "bytemd": "^1.22.0",
@@ -71,6 +72,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
+    "uploadthing": "^7.7.2",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
