refactor(echo): 修改为服务端组件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,10 +58,13 @@
     "PGHOST",
     "PGPASSWORD",
     "PGUSER",
+    "reactjs",
+    "Sakura",
     "Shadcnui",
     "sonner",
     "UNPOOLED",
     "uploadthing",
-    "Vercel"
+    "Vercel",
+    "vuejs"
   ]
 }
