--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cos-nodejs-sdk-v5": "2.16.0-beta.3",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
