--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-query-devtools": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/ws": "^8.18.1",
     "@uploadthing/react": "^7.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -76,6 +77,7 @@
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "uploadthing": "^7.7.2",
+    "ws": "^8.18.3",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
