增加阅读笔记

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "next-sitemap": "^4.2.3",
     "prisma": "^6.6.0",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^4.1.4",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
